--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ body {
     display: contents;
 }
 
-/* Nav bar */
+/* ----------------------------------------- Nav Bar -----------------------------------------*/
 
 .nav {
     width: 100%;
@@ -109,7 +109,7 @@ li a:hover {
 .active {
     background-color: rgba(255, 255, 255, 0.63);
 }
-/* Hamburger menu */
+/*----------------------------------------- Hamburger menu -----------------------------------------*/
 .topnav {
     overflow: hidden;
     background-color: rgb(82, 60, 60);
@@ -215,7 +215,7 @@ div.topnav {
     grid-area: img4;
 }
 
-/* Footer */
+/*----------------------------------------- Footer -----------------------------------------*/
 footer {
 
     background-color: rgb(144, 190, 192);
@@ -305,7 +305,7 @@ p.march-p,
     margin: 70px 20px 20px 20px;
 }
 
-/* Table */
+/*----------------------------------------- Table -----------------------------------------*/
 table.time-table {
     min-width: 200px;
     font-size: 1.2em;
@@ -508,7 +508,7 @@ div.g-pinscher#g-p {
 }
 
 
-/* Form */
+/*----------------------------------------- Form -----------------------------------------*/
 form {
     display: table;
     position: relative;
@@ -614,7 +614,7 @@ input[value="Reset Form"] {
     font-size: 5rem;
     margin: 20px;
 }
-/* Playground page */
+/*----------------------------------------- Playground Page -----------------------------------------*/
 #playground {
     grid-template-columns: auto;
     grid-template-rows: auto 80px 800px 80px auto auto;
@@ -929,7 +929,7 @@ table.classes-table {
     border: 1px solid;
 }
 
-/* Media Queries*/
+/*----------------------------------------- Media Queries -----------------------------------------*/
 @media only screen and (max-width: 500px) {
     .background {
         display: grid;
@@ -1082,27 +1082,22 @@ table.classes-table {
     }
 
     .p-reason {
-
         flex-wrap: wrap;
         margin: 20px;
-
     }
 
     .questions h3 {
         display: block;
         font-size: 1em;
     }
-
     img.swing {
         border: 15px solid white;
         width: 80%;
     }
-
     img.bench {
         border: 15px solid white;
         width: 80%;
     }
-
     .gym-container img {
         margin: 0 auto;
         display: flex;
@@ -1110,11 +1105,9 @@ table.classes-table {
         border: 15px solid white;
         width: 80%;
     }
-
     .gym-box {
         font-size: 1rem;
     }
-
     .gym-grid {
         margin: 10px;
     }
@@ -2050,22 +2043,16 @@ input.btn {
         "foot foot foot";
 }
 }
-
-/* Pool Page Media Query */
+/*----------------------------------------- Pool Page Media Query -----------------------------------------*/
 @media screen and (min-width: 1350px) and (max-width: 2560px) {
     #pool-body {
         grid-template-rows: 110px 80px 200px 700px 1200px auto;
         grid-template-columns: 1fr 1fr;
     }
-
     .form-btn {
         left: 51%;
     }
 }
-
-/* smaller screens */
-
-
 @media screen and (max-width: 770px) {
     #pool-body {
         display: grid;
